@@ -46,8 +46,8 @@ POP3="${POP3:=yes}"
 POP3_FLAGS="${POP3_FLAGS:=}"
 POP3S="${POP3S:=yes}"
 POP3S_FLAGS="${POP3S_FLAGS:=}"
-IMAP4="${IMAP4_FLAGS:=yes}"
-IMAP4_FLAGS="${IMAP4:=}"
+IMAP4="${IMAP4:=yes}"
+IMAP4_FLAGS="${IMAP4_FLAGS:=}"
 IMAP4S="${IMAP4S:=yes}"
 IMAP4S_FLAGS="${IMAP4S_FLAGS:=}"
 
